# CS230

./: .gitignore  README.md  combine_csv_data.py  create_encoder.py  create_json.py  create_scaler.py  evaluate_model.py  evaluate_visualize.py  extract_pose.py  extract_skeleton_data.py  live_detection.py  pose_samples.csv  pyproject.toml  reference_poses.json  rfc_model.ipynb  testcode-2.py  testcode.py  train_model.py
New folder/: biomechanics.py
posture_detection/data_loader/: coco_loader.py  data_loader.py
posture_detection/datasets/: extract_images.py  fetch_datasets.py
posture_detection/models/: hybrid_cnn_with_attention.py
posture_detection/testing/: hpt.py  predict.py  test.py
posture_detection/training/: config.yaml  train.py
posture_detection_with_MP_features/: README.md
posture_detection_with_MP_features/dataset/test/: annotations.json
posture_detection_with_MP_features/dataset/train/: annotations.json
posture_detection_with_MP_features/models/: hybrid_cnn_with_attention.py
posture_detection_with_MP_features/posture_detection_with_MP_features/: mp_processing.py
posture_detection_with_MP_features/testing/: hpt.py  predict.py  test.py
posture_detection_with_MP_features/training/: config.yaml  train.py
